# operation-system

./: README.md  child1  child2  main.cpp
cp/: BuddyAllocator.cpp  BuddyAllocator.hpp  CMakeLists.txt  main.cpp  mck-k.cpp  mck-k.hpp
doc/: lab_2.docx  lab_4.docx  lab_5.docx
lab3/: CMakeLists.txt
lab3/src/: lab.cpp
lab_1/doc/: lab_1.docx
lab_2/lab2/: CMakeLists.txt  main.cpp
lab_2/lab2/include/: parent.h  utils.h
lab_2/lab2/src/: child1.cpp  child2.cpp  parent.cpp  utils.cpp
lab_2/tests/: CMakeLists.txt  l2_test.cpp
lab_3/doc/: lab_3.docx
lab_3/lab3/: main.cpp
lab_3/lab3/include/: lab.h
lab_3/lab3/src/: lab.cpp
lab_3/tests/: CMakeLists.txt  l3_test.cpp
lab_4/: CMakeLists.txt  main.cpp
lab_4/include/: parent.h  utils.h
lab_4/src/: child1.cpp  child2.cpp  parent.cpp  utils.cpp
lab_4/tests/: CMakeLists.txt  lab4_test.cpp
lab_5/ch1/: CMakeLists.txt  main1.cpp
lab_5/ch1/include/: lab5_1.h  math1.h
lab_5/ch1/src/: lab5_1.cpp  math1.cpp
lab_5/ch1/tests/: CMakeLists.txt  l5_1_test.cpp
lab_5/ch2/: CMakeLists.txt  main2.cpp
lab_5/ch2/include/: lab5_2.h  math1.h  math2.h
lab_5/ch2/src/: lab5_2.cpp  math1.cpp  math2.cpp
lab_5/ch2/tests/: CMakeLists.txt  l5_2_test.cpp
lab_6-8/: CMakeLists.txt
lab_6-8/doc/: lab_6-8.docx
lab_6-8/include/: calculation_node.cpp  control.cpp  search.cpp
lab_6-8/l6/: CMakeCache.txt  Makefile  calculation  cmake_install.cmake  control
lab_6-8/src/: search.hpp  topology.hpp  zmq_std.hpp
